Prevent image border scaling down the image and causing blurriness

--- a/src/stylesheets/components/core/_image.scss
+++ b/src/stylesheets/components/core/_image.scss
@@ -12,7 +12,7 @@
 		margin-right: auto;
 
 		.image {
-			border: 1px solid #d9d9d9;
+			outline: 1px solid #d9d9d9;
 
 			&.annotation:hover {
 				border-color: gray;
